mongod termination process should always shutdown and join the CatalogCached's thread pool

XMLWordPrintableJSON

    • Sharding EMEA
    • Fully Compatible
    • ALL
    • v7.0, v6.0, v5.0, v4.4
    • Sharding EMEA 2023-05-15
    • 59
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The CatalogCache's thread pool is actually shutted down and joined by the main process when the mongod process terminates if the ShardingState is enabled.
      In some undetermined conditions, the ShardingState is disabled but some threads of this pool are still running causing memory leaks.

      The goal of this ticket is to determine the proper condition to shutdown and join the CatalogCache's thread pool.

            Assignee:
            Antonio Fuschetto
            Reporter:
            Antonio Fuschetto
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: