SERVER-77074 Always shutdown and join the CatalogCached's thread pool when mongod terminates